Trying to fix the z-index issue. Looks like need to clone the dragging objects.

--- a/makahiki/static/less/widget-sgg-design.less
+++ b/makahiki/static/less/widget-sgg-design.less
@@ -421,14 +421,18 @@ a.sgg-category {
 
 .designer-left {
 	float: left;
+	height: 700px;
 }
 
 .designer-right {
 	float: right;
+	height: 700px;
 }
+
 
 .container-fluid > .designer-center {
     margin: 0 22%;
+	height: 700px;
 }
 
 .designer-sidebar, .designer-center {
@@ -452,10 +456,19 @@ a.sgg-category {
 	overflow-y: scroll;	
 }
 
+#designer-publish {
+	float: right;
+}
+
 #category-dropzone .designer-table {
 	width: 80%;
 }
 
 #action-dropzone .designer-table {
 	width: 80%;
+}
+
+#revert-form, #publish-form {
+	margin: 4px 2px 4px 2px;
+	padding: 4px 2px 4px 2px;
 }
